🐛 Fix height on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,9 @@ html,
 body {
   max-width: 100vw;
   max-height: 100vh;
+  height: 100%;
+  width: 100%;
+  margin: 0;
   overflow-x: hidden;
 }
 
