--- a/src/components/background.module.scss
+++ b/src/components/background.module.scss
@@ -1,10 +1,10 @@
 .scene {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+  min-height: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .quote {
@@ -23,6 +23,8 @@
 
 .canvas {
   /* resulting css */
+  min-height: 100%;
+  height: 100%;
   background: linear-gradient(
       128deg,
       rgba(236, 239, 241, 0.9),
